syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "src/main/proto/wfa/measurement/internal/kingdom/repetition_spec.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message ReportConfigSchedule {
  fixed64 external_advertiser_id = 1;
  fixed64 external_report_config_id = 2;
  fixed64 external_schedule_id = 3;

  google.protobuf.Timestamp next_report_start_time = 4;

  RepetitionSpec repetition_spec = 5;
  string repetition_spec_json = 6;
}
